# c-rbtree

./: .editorconfig  .gitignore  .travis.yml  COPYING  Makefile.am  NEWS  README  autogen.sh  c-rbtree.spec  configure.ac  meson.build  solibraries.mk
.github/workflows/: ci.yml
m4/: attributes.m4
src/: c-rbtree-private.h  c-rbtree.c  c-rbtree.h  c-rbtree.pc.in  crbtree-private.h  crbtree.c  crbtree.h  libcrbtree.pc.in  libcrbtree.sym  meson.build  test-api.c  test-basic.c  test-map.c  test-parallel.c  test-posix.c
src/docs/: conf.py
src/org.bus1/: c-rbtree.h
